[project]
name = "example_package_sum"
version = "0.0.1"
authors = [
  { name="Bhargavi", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: bad bava oa",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bmummareddy/sum"
